set(CMAKE_CXX_STANDARD 20)

add_executable(example_readme example_readme.cpp)
target_link_libraries(example_readme asyncpp_uv)

add_executable(example1_sleep example1_sleep.cpp)
target_link_libraries(example1_sleep asyncpp_uv)

add_executable(example2_then example2_then.cpp)
target_link_libraries(example2_then asyncpp_uv)

add_executable(example3_curl example3_curl.cpp)
target_link_libraries(example3_curl asyncpp_uv_curl)

add_executable(example4_curl_sync example4_curl_sync.cpp)
target_link_libraries(example4_curl_sync asyncpp_uv_curl)
